--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saran-3012.github.io/Daily-Quests",
+  "homepage": "http://saran-3012.github.io/daily-quests",
   "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
